fix(bls): use lazy loading for catalog data and authenticated DuckDB
- Replace eager catalog loading in constructor with lazy initialization
  pattern using ensureCatalogsLoaded() called on first access
- Add getRegionCodesList() and getMetroGeographiesMap() accessor methods
  that trigger lazy loading
- Change all DuckDB connections to use getDuckDBConnection(storageProvider)
  for proper S3/R2 authentication when reading parquet files
- Fix Java 8 compatibility: replace List.getFirst() with List.get(0)
- Use substituteSqlParameters() instead of executeWithParams() for
  NAICS sectors SQL since json_each() doesn't work with PreparedStatement

This allows the downloader to be constructed before reference data is
generated, with catalog loading deferred until actual data access.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>